src/objects/QIPP_Contacts__c.object
<CustomObject>
    <description>Contact database for QIPP Application</description>
    <fields>
        <fullName>Assign_User_License_Request_Generator__c</fullName>
        <label>User License Requested By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Belt_Certification__c</fullName>
        <label>Belt Certification</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Specified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia-Green Belt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia-Black Belt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia-Master Black Belt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External-Green Belt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External-Black Belt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External-Master Black Belt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Function__c</fullName>
        <label>Primary Business Function</label>
        <picklist>
            <picklistValues>
                <fullName>QIPP Audit User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIPP Portfolio Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIPP Project Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIPP Project Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIPP QLT Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIPP Task Initiator / Implementer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CoPQ_Role_1__c</fullName>
        <label>Role 1</label>
        <picklist>
            <picklistValues>
                <fullName>Business Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Owner Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Approver Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q PMO Team Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measure Creator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL Transformation Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit Master Black Belt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CoPQ_Role_2__c</fullName>
        <label>Role 2</label>
        <picklist>
            <picklistValues>
                <fullName>Business Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Owner Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Approver Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q PMO Team Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measure Creator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL Transformation Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit Master Black Belt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CoPQ_Role_3__c</fullName>
        <label>Role 3</label>
        <picklist>
            <picklistValues>
                <fullName>Business Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Owner Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Approver Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q PMO Team Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measure Creator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL Transformation Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Unit Master Black Belt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_BL__c</fullName>
        <label>L3 Org (BL)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_BU__c</fullName>
        <label>L2 Org (BU)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_L4_Org__c</fullName>
        <label>L4 Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_L5_Org__c</fullName>
        <label>Contact L5 Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Line_Manager_Email__c</fullName>
        <label>Contact Line Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Line_Manager_NSN_ID__c</fullName>
        <label>Contact Line Manager NSN ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Line_Manager__c</fullName>
        <label>Contact Line Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <label>Contact State</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions_to_Support_Team__c</fullName>
        <label>Instructions to Support Team</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSN_ID_Text__c</fullName>
        <externalId>true</externalId>
        <label>NSN ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Remove_User_License_Request_Generator__c</fullName>
        <label>User License Removed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Business_Function__c</fullName>
        <label>Secondary Business Function</label>
        <picklist>
            <picklistValues>
                <fullName>QIPP Audit Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIPP Audit Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIPP Portfolio Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIPP Portfolio Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIPP QLT Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIPP Task Initiator / Implementer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QIPP Audit User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a user account, if it is already setup</inlineHelpText>
        <label>User License</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>QIPP Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Belt_Certification__c</columns>
        <columns>Contact_L4_Org__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contact_BU__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Belts</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Belt_Certification__c</field>
            <operation>equals</operation>
            <value>Green Belt,Black Belt,Master Black Belt</value>
        </filters>
        <label>Belts</label>
    </listViews>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contacts</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>QIPP_Contact_NSN_ID_Check</fullName>
        <active>true</active>
        <description>check if NSN ID is integer or not</description>
        <errorConditionFormula>AND(LEN( NSN_ID_Text__c ) &gt; 0, NOT(ISNUMBER(NSN_ID_Text__c)))</errorConditionFormula>
        <errorDisplayField>NSN_ID_Text__c</errorDisplayField>
        <errorMessage>Please insert correct NSN ID</errorMessage>
    </validationRules>
</CustomObject>